gcc/testsuite/algol68/compile/actual-bounds-expected-3.a68
# { dg-options "-fstropping=upper" }  #

BEGIN LOC[]INT a := (1,2,3), # { dg-error "actual bounds expected" }  #
               b := (4);
      SKIP
END
